<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_image">

    <!--Back button-->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round_button"
        android:onClick="Move"
        android:paddingLeft="8dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!--Current score-->
    <TextView
        android:id="@+id/txtCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="175dp"
        android:textColor="@color/white"
        android:text="Score: 0"
        android:textSize="24sp"/>

    <!--Timer-->
    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="TIME REMAINING\n10 SECONDS"
        android:textSize="36sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <!--Directions-->
    <TextView
        android:id="@+id/directionslbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="125dp"
        android:text="Tap the heart as many times as you can in 10 seconds"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <!--Heart balloon-->
    <ImageView
        android:id="@+id/imageBalloon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:onClick="onBalloonClick"
        android:src="@drawable/heart" />

    <!--Game over text-->
    <TextView
        android:id="@+id/txtGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageBalloon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="GAME OVER"
        android:textSize="30sp"
        android:visibility="gone"/>

    <!--Play again button-->
    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtGameOver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Play Again"
        android:visibility="gone"
        android:onClick="onPlayAgainClick"/>

    <!--Start button-->
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="Start Game"
        app:backgroundTint="@null"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:padding="10dp" />

</RelativeLayout>